--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,11 @@
             <version>5.17.0</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>5.10.2</version> <!-- or latest -->
+          <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -49,6 +48,22 @@
                   </configuration>
                 </execution>
               </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>3.2.5</version>
+              <configuration>
+                <useFile>false</useFile>
+                <printSummary>true</printSummary>
+                <reportFormat>brief</reportFormat>
+                <properties>
+                  <property>
+                    <name>listener</name>
+                    <value>VerboseTestListener</value>
+                  </property>
+                </properties>
+              </configuration>
             </plugin>
         </plugins>
     </build>
